@@ -26,6 +26,16 @@
 #endif
 
 /*
+ * Check if this is Tcl 8.5 or higher.  In that case, we will have the TIP
+ * #143 APIs (i.e. interpreter resource limiting) available.
+ */
+
+#if (TCL_MAJOR_VERSION > 8) || \
+    ((TCL_MAJOR_VERSION == 8) && (TCL_MINOR_VERSION >= 5))
+# define TCL_TIP143
+#endif
+
+/*
  * Check if this is Tcl 8.6 or higher.  In that case, we will have the TIP
  * #285 APIs (i.e. asynchronous script cancellation) available.
  */
@@ -95,6 +105,22 @@ static struct ThreadSpecificData *threadList = NULL;
  */
 
 static char *threadEmptyResult = (char *)"";
+
+/*
+ * This will be set to non-zero if TIP #143 functionality is available.
+ */
+
+#ifdef TCL_TIP143
+static int threadHaveInterpLimit = 0;
+#endif
+
+/*
+ * This will be set to non-zero if TIP #285 functionality is available.
+ */
+
+#ifdef TCL_TIP285
+static int threadHaveInterpCancel = 0;
+#endif
 
 /*
  * An instance of the following structure contains all information that is
@@ -419,18 +445,27 @@ ThreadInit(interp)
     TCL_CMD(interp, THREAD_CMD_PREFIX"detach",    ThreadDetachObjCmd);
     TCL_CMD(interp, THREAD_CMD_PREFIX"attach",    ThreadAttachObjCmd);
 
-#ifdef TCL_TIP285
+#if defined(TCL_TIP143) || defined(TCL_TIP285)
     {
         /*
-         * This package may have been compiled against Tcl 8.6 or higher;
-         * however, what if it is being loaded by Tcl 8.5 or lower?  Perform
-         * a version check now to stop using from trying to use the TIP #285
-         * functionality if it is not present.
+         * This package may have been compiled against Tcl 8.5 or higher;
+         * however, what if it is being loaded by Tcl 8.4 or lower?  Perform
+         * a version check now to stop using from trying to use the TIP #143
+         * or TIP #285 functionality if they are not present.
          */
 
         int major, minor;
 
         Tcl_GetVersion(&major, &minor, NULL, NULL);
+
+        Tcl_MutexLock(&threadMutex);
+        if (major > 8 || (major == 8 && minor >= 5)) {
+            threadHaveInterpLimit = 1;
+        }
+        if (major > 8 || (major == 8 && minor >= 6)) {
+            threadHaveInterpCancel = 1;
+        }
+        Tcl_MutexUnlock(&threadMutex);
 
         if (major > 8 || (major == 8 && minor >= 6)) {
             TCL_CMD(interp, THREAD_CMD_PREFIX"cancel",    ThreadCancelObjCmd);
@@ -2745,7 +2780,7 @@ ThreadSend(interp, thrId, send, clbk, flags)
  *  to stop.
  *
  * Results:
- *  TCL_OK always
+ *  Standard Tcl result.
  *
  * Side effects:
  *  Deletes any thread::send or thread::transfer events that are
@@ -2756,8 +2791,24 @@ ThreadSend(interp, thrId, send, clbk, flags)
 static int
 ThreadWait()
 {
+    int code = TCL_OK;
     int canrun = 1;
+    int haveInterpLimit;
+    int haveInterpCancel;
     ThreadSpecificData *tsdPtr = TCL_TSD_INIT(&dataKey);
+
+#if defined(TCL_TIP143) || defined(TCL_TIP285)
+    Tcl_MutexLock(&threadMutex);
+#endif
+#ifdef TCL_TIP143
+    haveInterpLimit = threadHaveInterpLimit;
+#endif
+#ifdef TCL_TIP285
+    haveInterpCancel = threadHaveInterpCancel;
+#endif
+#if defined(TCL_TIP143) || defined(TCL_TIP285)
+    Tcl_MutexUnlock(&threadMutex);
+#endif
 
     /*
      * Process events until signaled to stop.
@@ -2776,8 +2827,36 @@ ThreadWait()
             Tcl_ConditionNotify(&tsdPtr->doOneEvent);
             Tcl_MutexUnlock(&threadMutex);
         }
+
+        /*
+         * Attempt to process one event, blocking forever until an
+         * event is actually received.  The event processed may cause
+         * a script in progress to be canceled or exceed its limit;
+         * therefore, check for these conditions if we are able to
+         * (i.e. we are running in a high enough version of Tcl).
+         */
+
         Tcl_DoOneEvent(TCL_ALL_EVENTS);
-        
+
+#ifdef TCL_TIP285
+        if (haveInterpCancel) {
+            if (Tcl_Canceled(tsdPtr->interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+                code = TCL_ERROR;
+                break;
+            }
+        }
+#endif
+#ifdef TCL_TIP143
+        if (haveInterpLimit) {
+            if (Tcl_LimitExceeded(tsdPtr->interp)) {
+                Tcl_ResetResult(tsdPtr->interp);
+                Tcl_AppendResult(tsdPtr->interp, "limit exceeded", NULL);
+                code = TCL_ERROR;
+                break;
+            }
+        }
+#endif
+
         /*
          * Test stop condition under mutex since
          * some other thread may flip our flags.
@@ -2804,7 +2883,7 @@ ThreadWait()
 
     Tcl_DeleteEvents((Tcl_EventDeleteProc*)ThreadDeleteEvent, NULL);
 
-    return TCL_OK;
+    return code;
 }
 
 /*
